--- a/src/app/pages/log-work/form/containers/doctor/doctor.component.scss
+++ b/src/app/pages/log-work/form/containers/doctor/doctor.component.scss
@@ -1,42 +1,12 @@
 :host {
-    form {
-        display: flex;
-        flex-direction: column;
-
-        ion-item-group {
-            &:first-of-type {
-                max-height: 40vh;
-                overflow-y: auto;
-            }
-            ion-grid {
-                ion-row {
-                    padding: 5px;
-                    ion-col {
-                        &.bordered {
-                            border-radius: 8px;
-                            border: solid 2px;
-                            border-color: var(--ion-color-light-09);
-                        }
-
-                        display: flex;
-                        align-items: center;
-                        justify-content: center;
-
-                        app-date-picker {
-                            flex: 1;
-                        }
-                    }
-                }
-            }
-        }
-
+    @mixin buttons-common {
         ion-buttons {
             display: flex;
             justify-content: center;
-            margin-top: 15px;
+            // margin-top: 15px;
 
             ion-button {
-                padding: 15px;
+                padding: 11px;
                 margin: 0 5px;
                 border-radius: 8px;
                 font-size: 14px;
@@ -46,5 +16,32 @@
                 box-shadow: 0px 2px 10px 1px var(--ion-color-shadow01);
             }
         }
+    }
+
+    form {
+        display: flex;
+        flex-direction: column;
+
+        ion-item-group {
+            &:first-of-type {
+                max-height: 45vh;
+                overflow-y: auto;
+            }
+
+            margin-bottom: 20px;
+
+            ion-grid {
+                ion-row {
+                    padding: 5px;
+                    ion-col {
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                    }
+                }
+            }
+        }
+
+        @include buttons-common;
     }
 }
