--- a/src/app/pages/log-work/form/containers/work-item/work-item.component.scss
+++ b/src/app/pages/log-work/form/containers/work-item/work-item.component.scss
@@ -1,12 +1,36 @@
 :host {
     form {
         ion-grid {
+            max-height: 50vh;
+            overflow-y: auto;
+
             ion-row {
+                &:last-of-type {
+                    margin-bottom: 20px;
+                }
+
                 ion-col {
                     display: flex;
                     justify-content: center;
                     align-items: center;
                 }
+            }
+        }
+
+        ion-buttons {
+            display: flex;
+            justify-content: center;
+            // margin-top: 15px;
+
+            ion-button {
+                padding: 11px;
+                margin: 0 5px;
+                border-radius: 8px;
+                font-size: 14px;
+                font-family: var(--ion-font-family-semibold);
+                color: var(--ion-color-primary-shade);
+                background-color: var(--ion-color-primary);
+                box-shadow: 0px 2px 10px 1px var(--ion-color-shadow01);
             }
         }
     }
