fixes update on doctor and work items

--- a/src/app/pages/log-work/form/containers/doctor/doctor.component.scss
+++ b/src/app/pages/log-work/form/containers/doctor/doctor.component.scss
@@ -32,6 +32,9 @@
 
             ion-grid {
                 ion-row {
+                    &:last-of-type {
+                        margin-bottom: 20px;
+                    }
                     padding: 5px;
                     ion-col {
                         display: flex;
