changes some styling; adds delete functionality for daily work and changes work item to services as labels

--- a/src/app/pages/setup/containers/setup-work-item/setup-work-item.component.html
+++ b/src/app/pages/setup/containers/setup-work-item/setup-work-item.component.html
@@ -1,4 +1,4 @@
-<app-header [title]="'Setup Work Items'" [backBtnEnabled]="true"></app-header>
+<app-header [title]="'Setup Services'" [backBtnEnabled]="true"></app-header>
 
 <ion-content class="app-inner-padding">
     <ng-container *ngFor="let workItem of workItems$ | async">
