--- a/src/app/shared/components/item-sliding-card/item-sliding-card.component.html
+++ b/src/app/shared/components/item-sliding-card/item-sliding-card.component.html
@@ -40,7 +40,7 @@
             <ion-item-option *ngIf="canDelete" class="ion-no-border delete">
                 <ion-icon
                     (eventTriggered)="deleteItem($event)"
-                    name="close-outline"
+                    name="trash-outline"
                     appThrottleButtonDirective
                 ></ion-icon>
             </ion-item-option>
