--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -8,7 +8,8 @@
         content: '';
         width: 100%;
         background-color: var(--ion-color-background);
-        height: 130px;
+        // background-color: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 41%, rgba(0,212,255,1) 100%);
+        height: 140px;
         border-radius: 0 0 30px 30px;
     }
     ion-content {
