--- a/src/app/pages/log-work/swiper/swiper.component.html
+++ b/src/app/pages/log-work/swiper/swiper.component.html
@@ -1,5 +1,13 @@
 <ion-header [translucent]="true" no-border no-shadow class="ion-no-border">
     <ion-toolbar>
+        <ion-buttons slot="start">
+            <ion-button
+                [disabled]="isDeleteButtonEnabled"
+                (click)="deleteLoggedWorkForDate()"
+            >
+                <ion-icon name="trash-outline"></ion-icon>
+            </ion-button>
+        </ion-buttons>
         <ion-buttons slot="end">
             <ion-button (click)="closeModal()">
                 <ion-icon name="close-outline"></ion-icon>
