--- a/src/app/pages/setup/containers/setup-work-item/setup-work-item.component.scss
+++ b/src/app/pages/setup/containers/setup-work-item/setup-work-item.component.scss
@@ -8,7 +8,7 @@
         content: "";
         width: 100%;
         background-color: var(--ion-color-background);
-        height: 10vh;
+        height: 140px;
         border-radius: 0 0 30px 30px;
     }
 }
