--- a/src/app/pages/setup/setup.component.html
+++ b/src/app/pages/setup/setup.component.html
@@ -9,7 +9,7 @@
 
     <ion-card (click)="goToWorkItemsList()">
         <ion-card-header>
-            <ion-card-title>Work Items</ion-card-title>
+            <ion-card-title>Services</ion-card-title>
         </ion-card-header>
     </ion-card>
 </ion-content>
