adds styling changes, validation errors and more

--- a/src/app/pages/log-work/form/components/date-picker/date-picker.component.html
+++ b/src/app/pages/log-work/form/components/date-picker/date-picker.component.html
@@ -7,3 +7,11 @@
 >
     {{ label }}
 </ion-input>
+
+<ion-note
+    *ngIf="attachedFormControl?.errors; let errors"
+    color="danger"
+    size="small"
+>
+    {{ errors | translateError }}
+</ion-note>
