--- a/src/app/pages/log-work/form/containers/pacient/pacient.component.html
+++ b/src/app/pages/log-work/form/containers/pacient/pacient.component.html
@@ -25,6 +25,16 @@
                             labelPlacement="floating"
                         >
                         </ion-input>
+                        <ion-note
+                            *ngIf="
+                                pacientControl.get('patient')?.errors;
+                                let errors
+                            "
+                            color="danger"
+                            size="small"
+                        >
+                            {{ errors | translateError }}
+                        </ion-note>
                     </ion-item>
 
                     <ion-buttons>
