--- a/src/app/pages/log-work/form/containers/pacient/pacient.component.scss
+++ b/src/app/pages/log-work/form/containers/pacient/pacient.component.scss
@@ -7,6 +7,9 @@
             &:last-of-type {
                 margin-bottom: 20px;
             }
+            ion-note {
+                font-size: 13px;
+            }
         }
     }
     ion-buttons {
