--- a/src/app/pages/log-work/form/components/searcheable-select-input/searcheable-select-input.component.html
+++ b/src/app/pages/log-work/form/components/searcheable-select-input/searcheable-select-input.component.html
@@ -6,3 +6,11 @@
     readonly
     [ngModel]="selectedValue"
 ></ion-input>
+
+<ion-note
+    *ngIf="attachedFormControl?.errors; let errors"
+    color="danger"
+    size="small"
+>
+    {{ errors | translateError }}
+</ion-note>
