--- a/src/app/pages/log-work/form/components/searcheable-select-input/searcheable-select-input.component.scss
+++ b/src/app/pages/log-work/form/components/searcheable-select-input/searcheable-select-input.component.scss
@@ -6,9 +6,15 @@
 		// border-radius: 8px;
 		// border: solid 2px;
 		// border-color: var(--ion-color-light-09);
-		font-size: 13px;
-		color: var(--ion-color-grey);
+		font-size: 14px;
+		color: var(----ion-text-color);
 		font-family: var(--ion-font-family-bold);
+
+		label {
+			color: var(--ion-color-dark-04);
+			font-size: 16px;
+			font-family: var(--ion-font-family-bold);
+		}
 
 		&.error-class {
 			border-color: var(--ion-color-error);
@@ -29,5 +35,9 @@
 		&.disabled-class {
 			color: var(--ion-color-light-09);
 		}
+	}
+
+	ion-note {
+		font-size: 13px;
 	}
 }
