--- a/src/app/pages/log-work/form/containers/doctor/doctor.component.html
+++ b/src/app/pages/log-work/form/containers/doctor/doctor.component.html
@@ -22,7 +22,7 @@
                             <ion-item [formGroupName]="i">
                                 <app-search-select-input
                                     formControlName="doctor"
-                                    [form]="dgc.doctorFormGroup"
+                                    [attachedFormControl]="dgc.doctorFormGroup"
                                     [strategy]="strategy"
                                     (itemSelected)="onDoctorSelected($event, i)"
                                 ></app-search-select-input>
