--- a/src/app/pages/log-work/form/containers/work-item/work-item.component.html
+++ b/src/app/pages/log-work/form/containers/work-item/work-item.component.html
@@ -23,19 +23,33 @@
                             <app-search-select-input
                                 formControlName="workItem"
                                 [strategy]="strategy"
-                                [form]="wig.workItemGroup"
+                                [attachedFormControl]="
+                                    workItemControl.get('workItem')
+                                "
                             ></app-search-select-input>
                         </ion-item>
                     </ion-col>
+
                     <ion-col size="4">
                         <ion-item [formGroupName]="j">
                             <ion-input
+                                type="number"
                                 formControlName="numberOfWorkItems"
-                                type="text"
                                 label="Count"
                                 labelPlacement="floating"
                             >
                             </ion-input>
+                            <ion-note
+                                *ngIf="
+                                    workItemControl.get('numberOfWorkItems')
+                                        ?.errors;
+                                    let errors
+                                "
+                                color="danger"
+                                size="small"
+                            >
+                                {{ errors | translateError }}
+                            </ion-note>
                         </ion-item>
                     </ion-col>
                 </app-item-sliding-card>
