--- a/src/app/pages/log-work/form/containers/work-item/work-item.component.scss
+++ b/src/app/pages/log-work/form/containers/work-item/work-item.component.scss
@@ -13,6 +13,10 @@
                     display: flex;
                     justify-content: center;
                     align-items: center;
+
+                    ion-note {
+                        font-size: 13px;
+                    }
                 }
             }
         }
