--- a/src/app/pages/log-work/log-work.component.scss
+++ b/src/app/pages/log-work/log-work.component.scss
@@ -18,6 +18,10 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+
+            ion-datetime {
+                border: 1px solid var(--ion-color-background);
+            }
         }
     }
 }
