--- a/src/global.scss
+++ b/src/global.scss
@@ -34,7 +34,7 @@
     --ion-color-rose-shade: #73153b;
     --ion-color-rose-tint: #8f2f56;
 
-    --ion-text-color: #881337;
+    --ion-text-color: #62545d;
     --ion-text-color-rgb: 136, 19, 55;
 
     --ion-color-step-50: #f9e6e9;
@@ -136,4 +136,16 @@ ion-datetime {
 
     border-radius: 16px;
     box-shadow: rgba(var(--ion-color-rose-rgb), 0.3) 0px 10px 15px -3px;
+}
+
+.label-text-wrapper {
+    font-size: 16px;
+    color: var(----ion-text-color);
+    font-family: var(--ion-font-family-bold);
+}
+
+.native-wrapper {
+    font-size: 18px;
+    color: var(----ion-text-color);
+    font-family: var(--ion-font-family-bold);
 }
