--- a/src/app/pages/login/log-in.page.scss
+++ b/src/app/pages/login/log-in.page.scss
@@ -32,6 +32,7 @@
             flex: 1 1 100%;
             flex-direction: column;
             justify-content: space-between;
+            padding-bottom: 25px;
 
             .item-interactive.ion-invalid {
                 --highlight-background: var(--ion-color-light-shade);
