--- a/src/app/pages/register/register.page.scss
+++ b/src/app/pages/register/register.page.scss
@@ -9,7 +9,7 @@
         background-repeat: no-repeat;
         background-size: contain;
         background-position: top right;
-        padding-bottom: 50px;
+        // padding-bottom: 50px;
 
         .logo {
             max-width: 100px;
@@ -32,6 +32,7 @@
             flex: 1 1 100%;
             flex-direction: column;
             justify-content: space-between;
+            padding-bottom: 25px;
 
             .item-interactive.ion-invalid {
                 --highlight-background: var(--ion-color-light-shade);
