--- a/src/app/shared/components/settings-popover/settings-popover.component.html
+++ b/src/app/shared/components/settings-popover/settings-popover.component.html
@@ -1,23 +1,6 @@
 <ion-content class="ion-no-padding">
     <ion-list class="ion-no-padding">
         <ion-item [button]="true" [detail]="false" lines="none" (click)="logout()">Logout</ion-item>
-        <!-- <ion-item [button]="true" [detail]="false">Option 2</ion-item>
-        <ion-item [button]="true" id="nested-trigger">More options...</ion-item>
-
-        <ion-popover
-            trigger="nested-trigger"
-            [dismissOnSelect]="true"
-            side="end"
-        >
-            <ng-template>
-                <ion-content>
-                    <ion-list>
-                        <ion-item [button]="true" [detail]="false"
-                            >Nested option</ion-item
-                        >
-                    </ion-list>
-                </ion-content>
-            </ng-template>
-        </ion-popover> -->
+        <ion-item (click)="openTermsAndConditions()">Terms and Conditions</ion-item>
     </ion-list>
 </ion-content>
