--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -81,17 +81,11 @@
         <ion-item lines="none">
             <ion-checkbox
                 formControlName="termsAndConditions"
-                
+                style="margin-right: 10px"
             ></ion-checkbox>
             <ion-label (click)="openTaCSite()">
                 I agree to the <a>Terms and Conditions</a>
             </ion-label>
         </ion-item>
-
-        <!-- <ion-checkbox formControlName="termsAndConditions">
-            <ion-label>
-                I agree to the <a href="www.google.com">Terms and Conditions</a>
-            </ion-label>
-        </ion-checkbox> -->
     </form>
 </ion-content>
