--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -2,22 +2,30 @@
     <ion-toolbar class="title" lines="none">
         <ion-buttons slot="start">
             <ion-button *ngIf="backBtnEnabled" (click)="goBack()">
-                <ion-icon
-                    name="chevron-back-outline"
-                    size="large"
-                    color="primary"
-                ></ion-icon>
+                <ion-icon name="chevron-back-outline" size="large"></ion-icon>
             </ion-button>
         </ion-buttons>
         <ion-buttons slot="end">
-            <ion-button *ngIf="settingsEnabled" (click)="presentPopover($event)">
-                <ion-icon
-                    name="settings-outline"
-                    size="large"
-                    color="primary"
-                ></ion-icon>
+            <ion-button
+                *ngIf="settingsEnabled"
+                (click)="presentPopover($event)"
+            >
+                <ion-icon name="settings-outline" size="large"></ion-icon>
             </ion-button>
         </ion-buttons>
         <ion-title>{{ title }}</ion-title>
     </ion-toolbar>
+    <div class="custom-shape-divider-top-1707164763">
+        <svg
+            data-name="Layer 1"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 1200 120"
+            preserveAspectRatio="none"
+        >
+            <path
+                d="M985.66,92.83C906.67,72,823.78,31,743.84,14.19c-82.26-17.34-168.06-16.33-250.45.39-57.84,11.73-114,31.07-172,41.86A600.21,600.21,0,0,1,0,27.35V120H1200V95.8C1132.19,118.92,1055.71,111.31,985.66,92.83Z"
+                class="shape-fill"
+            ></path>
+        </svg>
+    </div>
 </ion-header>
