--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -25,7 +25,8 @@
 	--ion-color-secondary: #117796;
 	--ion-color-primary-tint: #4ea3bd;
 	--ion-color-primary-shade: #3c90a9;
-	--ion-color-background: #72bacc;
+	// --ion-color-background: #72bacc;
+	--ion-color-background: #8F73A7;
 	--ion-color-selected-shade: #b9dbe5;
 	--ion-color-selected-tint: #e7f1f5;
 	--ion-color-grey: #5b5b5b;
