--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,19 +2,19 @@
 
 <ion-content [fullscreen]="true" class="app-inner-padding">
     <ion-list>
-        <ion-card color="primary" (click)="openLogWork()">
+        <ion-card color="primary" (click)="openLogWork()" mode="ios">
             <ion-card-header>
                 <ion-card-title>Log Work</ion-card-title>
             </ion-card-header>
         </ion-card>
 
-        <ion-card color="secondary" (click)="openSetup()">
+        <ion-card color="secondary" (click)="openSetup()" mode="ios">
             <ion-card-header>
                 <ion-card-title>Setup</ion-card-title>
             </ion-card-header>
         </ion-card>
 
-        <ion-card color="tertiary" (click)="openReports()">
+        <ion-card color="tertiary" (click)="openReports()" mode="ios">
             <ion-card-header>
                 <ion-card-title>Reports</ion-card-title>
             </ion-card-header>
