--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,18 +1,24 @@
 :host {
-    &::after {
-        position: absolute;
-        top: 0;
-        right: 0;
-        left: 0;
-        bottom: auto;
-        content: '';
-        width: 100%;
-        background-color: var(--ion-color-background);
-        // background-color: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 41%, rgba(0,212,255,1) 100%);
-        height: 140px;
-        border-radius: 0 0 30px 30px;
-    }
+    
+    // &::after {
+    //     position: absolute;
+    //     top: 0;
+    //     right: 0;
+    //     left: 0;
+    //     bottom: auto;
+    //     content: "";
+    //     width: 100%;
+    //     background-color: var(--ion-color-background);
+    //     // background-color: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 41%, rgba(0,212,255,1) 100%);
+    //     height: 140px;
+    //     border-radius: 0 0 30px 30px;
+    // }
     ion-content {
         --background: transparent;
+
+        ion-card {
+            border-radius: 15px;
+            box-shadow: 5px 3px 10px 6px var(--ion-color-shadow01);
+        }
     }
 }
