--- a/src/app/pages/log-work/form/containers/pacient/pacient.component.html
+++ b/src/app/pages/log-work/form/containers/pacient/pacient.component.html
@@ -23,18 +23,12 @@
                             type="text"
                             label="Patient"
                             labelPlacement="floating"
+                            errorText="{{
+                                pacientControl.get('patient')?.errors
+                                    | translateError
+                            }}"
                         >
                         </ion-input>
-                        <ion-note
-                            *ngIf="
-                                pacientControl.get('patient')?.errors;
-                                let errors
-                            "
-                            color="danger"
-                            size="small"
-                        >
-                            {{ errors | translateError }}
-                        </ion-note>
                     </ion-item>
 
                     <ion-buttons>
