--- a/src/app/pages/setup/setup.component.html
+++ b/src/app/pages/setup/setup.component.html
@@ -1,13 +1,13 @@
 <app-header [title]="'Setup'" [backBtnEnabled]="true"></app-header>
 
 <ion-content class="app-inner-padding">
-    <ion-card (click)="goToDoctorsList()">
+    <ion-card (click)="goToDoctorsList()" mode="ios">
         <ion-card-header>
             <ion-card-title>Doctors</ion-card-title>
         </ion-card-header>
     </ion-card>
 
-    <ion-card (click)="goToWorkItemsList()">
+    <ion-card (click)="goToWorkItemsList()" mode="ios">
         <ion-card-header>
             <ion-card-title>Services</ion-card-title>
         </ion-card-header>
