updates android version and applies some styling improvements

--- a/src/app/pages/log-work/log-work.component.scss
+++ b/src/app/pages/log-work/log-work.component.scss
@@ -13,6 +13,7 @@
     // }
     ion-content {
         --background: transparent;
+        top: 40px;
 
         .datetime-wrapper {
             display: flex;
