--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -1,6 +1,4 @@
-<ion-header class="ion-no-border">
-    <!-- <ion-img class="logo" src="assets/imgs/gimbil_logo_light.png"></ion-img> -->
-</ion-header>
+<ion-header class="ion-no-border"> </ion-header>
 
 <ion-content class="ion-padding">
     <form [formGroup]="form">
