--- a/src/app/pages/setup/containers/setup-doctor/setup-doctor.component.scss
+++ b/src/app/pages/setup/containers/setup-doctor/setup-doctor.component.scss
@@ -13,6 +13,7 @@
     // }
     ion-content {
         --background: transparent;
+        top: 20px;
 
         ion-card {
             width: 90%;
@@ -23,6 +24,12 @@
             ion-item-option {
                 border-radius: 10px;
             }
+        }
+
+        ion-fab {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
         }
     }
 }
